Admin user management
- Imports bootstap in index.html
- Adds demo table
- Adds slight layout changes

--- a/src/app/features/admin/component/admin-home/admin-home.component.html
+++ b/src/app/features/admin/component/admin-home/admin-home.component.html
@@ -1,1 +1,6 @@
-<h1>ADMIN'S LANDING PAGE</h1>
+<div class="container-fluid">
+    <h1>
+        ADMIN AREA
+    </h1>
+</div>
+<app-user-management></app-user-management>
