--- a/src/app/features/admin/component/admin-home/admin-home.component.html
+++ b/src/app/features/admin/component/admin-home/admin-home.component.html
@@ -1,6 +1,2 @@
-<div class="container-fluid">
-    <h1>
-        ADMIN AREA
-    </h1>
-</div>
+<app-menu-bar></app-menu-bar>
 <app-user-management></app-user-management>
