--- a/src/app/features/admin/component/user-management/user-management.component.html
+++ b/src/app/features/admin/component/user-management/user-management.component.html
@@ -1,8 +1,8 @@
 
 <div class="container-fluid">
-    <h3>
-        User management
-    </h3>
+    <h2>
+        All Users
+    </h2>
     <table class="tables table table-striped table-hover">
         <thead class ="thead-dark">
             <tr>
