--- a/src/app/shared/components/menu-bar/menu-bar.component.html
+++ b/src/app/shared/components/menu-bar/menu-bar.component.html
@@ -1,4 +1,3 @@
-
 <nav class="navbar navbar-expand-lg sticky-top navbar-light alert-dark">
     <a class="navbar-brand" href="#">
         <div>
@@ -22,7 +21,10 @@
          id="navbarNavDropdown">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Dashboard <span class="sr-only">(current)</span></a>
+                <a class="nav-link" (click)="dashboardMenuItemPressed()">
+                    Dashboard
+                    <span class="sr-only">(current)</span>
+                </a>
             </li>
             <li class="nav-item dropdown">
                 <a
@@ -35,11 +37,14 @@
                     Users Management
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="#">Show all users</a>
-                    <a class="dropdown-item" href="#">Create</a>
-                    <a class="dropdown-item" href="#">Edit</a>
-                    <a class="dropdown-item" href="#">Delete</a>
+                    <a class="dropdown-item" (click)="showAllUsersMenuItemPressed()">Show all Users</a>
+                    <a class="dropdown-item" (click)="createUserMenuItemPressed()">Create User</a>
+                    <a class="dropdown-item" (click)="editUserMenuItemPressed()">Edit User</a>
+                    <a class="dropdown-item" (click)="deleteUserMenuItemPressed()">Delete User</a>
                 </div>
+            </li>
+            <li class="nav-item" (click)="logoutMenuItemPressed()">
+                <a class="nav-link">Logout</a>
             </li>
         </ul>
     </div>
