--- a/src/app/shared/components/menu-bar/menu-bar.component.scss
+++ b/src/app/shared/components/menu-bar/menu-bar.component.scss
@@ -3,6 +3,7 @@
 
 .navbar {
   min-width: 232px;
+  margin-bottom: $normal-margin;
 }
 
 .app-icon {
@@ -20,5 +21,5 @@
 .main-menu-item {
   @include fontTextLarge;
   line-height: $menu-bar-app-icon-dimension - 3;
-  padding-top: 8px;
+  padding-top: 9px;
 }
