--- a/src/app/shared/components/menu-bar/menu-bar.component.html
+++ b/src/app/shared/components/menu-bar/menu-bar.component.html
@@ -6,7 +6,7 @@
                 alt=""
                 (click)="onAppIconClicked()">
         <span class="role-name" (click)="onRoleNameClicked()">
-            {{ loggedInUserHelperService.getActiveRoleDisplayName() }}
+            {{ getAppIconLabel() }}
         </span>
     </a>
     <button
@@ -22,50 +22,15 @@
     <div class="main-menu-item collapse navbar-collapse"
          id="navbarNavDropdown">
         <ul class="navbar-nav">
-            <li class="nav-item">
-                <a
-                        class="nav-link"
-                        data-toggle="toggle"
-                        [ngClass]="{'active': activeMenuItemIndex === 0}"
-                        (click)="onDashboardMenuItemClicked()">
-                    Dashboard
-                </a>
-            </li>
-            <li class="nav-item">
-                <a
-                        class="nav-link"
-                        data-toggle="toggle"
-                        [ngClass]="{'active': activeMenuItemIndex === 1}"
-                        (click)="onSettingsMenuItemClicked()">
-                    Settings
-                 </a>
-            </li>
-            <li class="nav-item dropdown">
-                <a
-                        class="nav-link dropdown-toggle"
-                        id="navbarDropdownMenuLink"
-                        role="button"
-                        data-toggle="dropdown"
-                        aria-haspopup="true"
-                        aria-expanded="false"
-                        [ngClass]="{
-                            'active': activeMenuItemIndex === 2,
-                            'disabled': !loggedInUserHelperService.isSuperAdmin()
-                        }">
-                    Users Management
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" (click)="onShowAllUsersMenuItemClicked()">
-                        Show all Users
-                    </a>
-                    <a class="dropdown-item" (click)="onCreateUserMenuItemClicked()">
-                        Create User
-                    </a>
-                    <a class="dropdown-item" (click)="onEditUserMenuItemClicked()">
-                        Edit User
-                    </a>
-                </div>
-            </li>
+            <ng-container *ngIf="loggedInUserHelperService.isAdminViewActive()">
+                <app-admin-menu-bar-items></app-admin-menu-bar-items>
+            </ng-container>
+            <ng-container *ngIf="loggedInUserHelperService.isSellerViewActive()">
+                <app-seller-menu-bar-items></app-seller-menu-bar-items>
+            </ng-container>
+            <ng-container *ngIf="loggedInUserHelperService.isBuyerViewActive()">
+                <app-buyer-menu-bar-items></app-buyer-menu-bar-items>
+            </ng-container>
             <li class="nav-item" (click)="onLogoutMenuItemClicked()">
                 <a class="nav-link">Logout</a>
             </li>
