Seller main menu
- Adds a role selector component to the main menu, without role data to
select.

--- a/src/app/shared/components/menu-bar/menu-bar.component.html
+++ b/src/app/shared/components/menu-bar/menu-bar.component.html
@@ -5,10 +5,8 @@
                 src="assets/icons/favicon.ico"
                 alt=""
                 (click)="onAppIconClicked()">
-        <span class="role-name" (click)="onRoleNameClicked()">
-            {{ getAppIconLabel() }}
-        </span>
     </a>
+    <app-active-role-selector></app-active-role-selector>
     <button
             class="navbar-toggler"
             type="button"
