Seller main menu
- Adds main menu role switching functionality:wq

--- a/src/app/shared/components/menu-bar/active-role-selector/active-role-selector.component.html
+++ b/src/app/shared/components/menu-bar/active-role-selector/active-role-selector.component.html
@@ -7,18 +7,23 @@
                 data-toggle="dropdown"
                 aria-haspopup="true"
                 aria-expanded="false">
-                <span class="role-name" (click)="onRoleNameClicked()">
+                <span class="role-name" (click)="onActiveRoleSelectorLabelClicked()">
                     {{ getActiveRoleSelectorLabel() }}
                 </span>
         </a>
         <div class="dropdown-menu" aria-labelledby="activeRoleMenuLink">
-            <a class="dropdown-item">Admin</a>
-            <a class="dropdown-item disabled">Seller</a>
+            <a
+                    *ngFor="let rolePopupItemLabel of roleSelectionPopupModel"
+                    class="dropdown-item"
+                    [ngClass]="{'disabled': isRolePopupItemRepresentingTheActiveView(rolePopupItemLabel)}"
+                    (click)="onRolePopupItemClicked(rolePopupItemLabel)">
+                {{ rolePopupItemLabel }}
+            </a>
         </div>
     </div>
 </ng-container>
 <ng-container *ngIf="!loggedInUserHelperService.isMultiRole()">
-      <span class="navbar-brand role-name" (click)="onRoleNameClicked()">
+      <span class="navbar-brand role-name" (click)="onActiveRoleSelectorLabelClicked()">
             {{ getActiveRoleSelectorLabel() }}
       </span>
 </ng-container>
