Create user form
- Increases app default font sizes
- Uses default font sizes for the create user form

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,3 +22,11 @@ h3 {
 h4 {
   @include fontHeadline4;
 }
+
+.field-label {
+  @include fontTextLarge;
+}
+
+.field-info {
+    @include fontTextSmall;
+}
