--- a/src/app/shared/components/input/field-info/field-info.component.html
+++ b/src/app/shared/components/input/field-info/field-info.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="hasFieldInfo()">
-    <small
-            class="form-text text-muted"
+    <div
+            class="field-info form-text text-muted"
             [id]="fieldId">
         {{ fieldInfo }}
-    </small>
+    </div>
 </ng-container>
