--- a/src/app/shared/components/input/field-label/field-label.component.html
+++ b/src/app/shared/components/input/field-label/field-label.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="hasFieldLabel()">
-    <label [for]="fieldId">
+    <label class="field-label" [for]="fieldId">
         {{ fieldLabel }}
     </label>
 </ng-container>
