Create user form
- Adds form group and form controls to the create user form.
- Adds required validators
- Adds max length restriction to text input fields

--- a/src/app/features/admin/component/create-user/create-user.component.html
+++ b/src/app/features/admin/component/create-user/create-user.component.html
@@ -3,10 +3,11 @@
         Create User
     </h2>
 
-    <form>
+    <form [formGroup]="formGroup">
 
         <app-input-text
-                [value]="''"
+                [parentFormGroup]="formGroup"
+                [inputControlName]="emailControlName"
                 [label]="'Email'"
                 [placeholder]="'Email'"
                 [fieldInfo]="'Please enter your email address.'"
@@ -14,15 +15,17 @@
         </app-input-text>
 
         <app-input-text
-            [value]="''"
-            [label]="'First Name'"
-            [placeholder]="'First Name'"
-            [fieldInfo]="''"
+                [parentFormGroup]="formGroup"
+                [inputControlName]="firstNameControlName"
+                [label]="'First Name'"
+                [placeholder]="'First Name'"
+                [fieldInfo]="''"
         >
         </app-input-text>
 
         <app-input-text
-                [value]="''"
+                [parentFormGroup]="formGroup"
+                [inputControlName]="familyNameControlName"
                 [label]="'Family Name'"
                 [placeholder]="'Family'"
                 [fieldInfo]="''"
@@ -30,34 +33,40 @@
         </app-input-text>
 
         <app-input-checkbox
-                [value]="false"
+                [parentFormGroup]="formGroup"
+                [inputControlName]="superAdminControlName"
                 [label]="'Assign Super Admin Role'"
         >
         </app-input-checkbox>
 
         <app-input-checkbox
-                [value]="false"
+                [parentFormGroup]="formGroup"
+                [inputControlName]="adminControlName"
                 [label]="'Assign Admin Role'"
         >
         </app-input-checkbox>
 
         <app-input-checkbox
-                [value]="false"
+                [parentFormGroup]="formGroup"
+                [inputControlName]="sellerControlName"
                 [label]="'Assign Seller Role'"
         >
         </app-input-checkbox>
 
         <app-input-checkbox
-                [value]="false"
+                [parentFormGroup]="formGroup"
+                [inputControlName]="buyerControlName"
                 [label]="'Assign Buyer Role'"
         >
         </app-input-checkbox>
 
         <button
                 class="btn btn-primary"
-                type="submit">
+                type="submit"
+                (click)="onCreateUserClicked()">
             Create User
         </button>
     </form>
 
 </div>
+
