Create user form
- Html formattings

--- a/src/app/shared/components/input/input-checkbox/input-checkbox.component.html
+++ b/src/app/shared/components/input/input-checkbox/input-checkbox.component.html
@@ -9,7 +9,8 @@
         <app-field-label
                 class="d-flex align-items-center"
                 [fieldId]="inputFieldId"
-                [fieldLabel]="label">
+                [fieldLabel]="label"
+        >
         </app-field-label>
     </div>
 </div>
