--- a/src/app/shared/components/input/input-text/input-text.component.html
+++ b/src/app/shared/components/input/input-text/input-text.component.html
@@ -1,7 +1,8 @@
 <form [formGroup]="parentFormGroup" class="form-group">
     <app-field-label
             [fieldId]="inputFieldId"
-            [fieldLabel]="label">
+            [fieldLabel]="label"
+    >
     </app-field-label>
     <input
             class="form-control"
@@ -14,6 +15,7 @@
     >
     <app-field-info
         [fieldId]="inputFieldInfoId"
-        [fieldInfo]="fieldInfo">
+        [fieldInfo]="fieldInfo"
+    >
     </app-field-info>
 </form>
