--- a/src/app/features/admin/component/create-user/create-user.component.html
+++ b/src/app/features/admin/component/create-user/create-user.component.html
@@ -63,7 +63,8 @@
         <button
                 class="btn btn-primary"
                 type="submit"
-                (click)="onCreateUserClicked()">
+                (click)="onCreateUserClicked()"
+        >
             Create User
         </button>
     </form>
