--- a/src/app/shared/components/menu-bar/admin-menu-bar-items/admin-menu-bar-items.component.html
+++ b/src/app/shared/components/menu-bar/admin-menu-bar-items/admin-menu-bar-items.component.html
@@ -4,7 +4,8 @@
                 class="nav-link"
                 data-toggle="toggle"
                 [ngClass]="{'active': activeMenuItemIndex === 0}"
-                (click)="onDashboardMenuItemClicked()">
+                (click)="onDashboardMenuItemClicked()"
+        >
             Dashboard
         </a>
     </li>
@@ -13,7 +14,8 @@
                 class="nav-link"
                 data-toggle="toggle"
                 [ngClass]="{'active': activeMenuItemIndex === 1}"
-                (click)="onSettingsMenuItemClicked()">
+                (click)="onSettingsMenuItemClicked()"
+        >
             Settings
         </a>
     </li>
@@ -28,7 +30,8 @@
                 [ngClass]="{
                     'active': activeMenuItemIndex === 2,
                     'disabled': !loggedInUserHelperService.isSuperAdmin()
-                }">
+                }"
+        >
             Users Management
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
