--- a/src/app/shared/components/menu-bar/menu-bar.component.html
+++ b/src/app/shared/components/menu-bar/menu-bar.component.html
@@ -4,7 +4,8 @@
                 class="app-icon d-inline-block align-top"
                 src="assets/icons/favicon.ico"
                 alt=""
-                (click)="onAppIconClicked()">
+                (click)="onAppIconClicked()"
+        />
     </a>
     <app-active-role-selector></app-active-role-selector>
     <button
@@ -14,7 +15,8 @@
             data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown"
             aria-expanded="false"
-            aria-label="Toggle navigation">
+            aria-label="Toggle navigation"
+    >
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="main-menu-item collapse navbar-collapse"
