Create user form
- Polishing.

--- a/src/app/shared/components/input/field-info/field-info.component.html
+++ b/src/app/shared/components/input/field-info/field-info.component.html
@@ -1,7 +1,8 @@
 <ng-container *ngIf="hasFieldInfo()">
     <div
             class="field-info form-text text-muted"
-            [id]="fieldId">
+            [id]="fieldId"
+    >
         {{ fieldInfo }}
     </div>
 </ng-container>
