--- a/src/app/shared/components/input/field-label/field-label.component.html
+++ b/src/app/shared/components/input/field-label/field-label.component.html
@@ -1,5 +1,8 @@
 <ng-container *ngIf="hasFieldLabel()">
-    <label class="field-label" [for]="fieldId">
+    <label
+            class="field-label"
+            [for]="fieldId"
+    >
         {{ fieldLabel }}
     </label>
 </ng-container>
