--- a/src/app/shared/components/input/input-checkbox/input-checkbox.component.scss
+++ b/src/app/shared/components/input/input-checkbox/input-checkbox.component.scss
@@ -6,6 +6,6 @@
   margin-right: 12px;
 
   &:focus {
-    box-shadow: 0 0 5px 1px $input-field-focus-color;
+    box-shadow: 0 0 5px 1px $input-field-bootstrap-box-shadow-focus-color;
   }
 }
