--- a/src/app/shared/components/input/field-info/field-info.component.html
+++ b/src/app/shared/components/input/field-info/field-info.component.html
@@ -8,8 +8,8 @@
 </ng-container>
 <ng-container *ngIf="hasErrorInfo()">
     <div
-            *ngIf="hasErrorInfo()"
-            class="field-info form-text text-muted invalid">
+            class="field-info form-text text-muted invalid"
+            [id]="fieldId">
         {{ getErrorInfo() }}
     </div>
 </ng-container>
