--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -4,8 +4,11 @@ $default-font-weight: 400;
 $bold-font-weight: 700;
 
 // Margins
-$small-margin: 4px;
-$normal-margin: 8px;
+$small-half-margin: 4px;
+$small-margin: 8px;
+$default-half-margin: 6px;
+$default-margin: 12px;
+$large-half-margin: 8px;
 $large-margin: 16px;
 
 // Menubar
