--- a/src/app/features/admin/views/show-users/show-users.component.html
+++ b/src/app/features/admin/views/show-users/show-users.component.html
@@ -2,26 +2,6 @@
     <h2>
         All Users
     </h2>
-    <table class="tables table table-striped table-hover">
-        <thead class ="thead-dark">
-            <tr>
-                <th scope="col">Name</th>
-                <th scope="col">Email</th>
-                <th scope="col">Roles</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let user of allUsers | async">
-                <td>
-                    {{ user.name }}
-                </td>
-                <td>
-                    {{ user.email }}
-                </td>
-                <td>
-                    {{ user.roleNames }}
-                </td>
-            </tr>
-        </tbody>
-    </table>
+    <app-users-table [userDtos]="userDtos">
+    </app-users-table>
  </div>
