--- a/src/app/features/admin/views/edit-user/edit-user.component.html
+++ b/src/app/features/admin/views/edit-user/edit-user.component.html
@@ -21,4 +21,9 @@
             </button>
         </div>
     </form>
+    <hr>
+    <ng-container *ngIf="userDtos">
+        <app-users-table [userDtos]="userDtos">
+        </app-users-table>
+    </ng-container>
 </div>
