--- a/src/app/features/admin/views/show-users/show-users.component.html
+++ b/src/app/features/admin/views/show-users/show-users.component.html
@@ -2,6 +2,7 @@
     <h2>
         All Users
     </h2>
-    <app-users-table [userDtos]="userDtos">
+    <app-users-table
+            [userDtos]="userDtos">
     </app-users-table>
  </div>
